Publish channel fields, #654

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -45,6 +45,7 @@
 <%= presenter.attribute_to_html(:provenance_text, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:publ_ver_level) %>
 <%= presenter.attribute_to_html(:publication_history, render_as: :multiline) %>
+<%= presenter.attribute_to_html(:publish_channels) %>
 <%= presenter.attribute_to_html(:start_date) %>
 <%= presenter.attribute_to_html(:status) %>
 <%= presenter.attribute_to_html(:transcript) %>
