New properties for StillImage, fixes #1005

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -51,3 +51,5 @@
 <%= presenter.attribute_to_html(:transcript) %>
 <%= presenter.attribute_to_html(:uid) %>
 <%= presenter.attribute_to_html(:view) %>
+<%= presenter.attribute_to_html(:view_notes) %>
+<%= presenter.attribute_to_html(:visual_surrogate) %>
