--- a/app/views/curation_concerns/base/_relationships_table.html.erb
+++ b/app/views/curation_concerns/base/_relationships_table.html.erb
@@ -1,7 +1,15 @@
-<% if presenter.has_relationships? %>
-  <%= render_preferred_representations(presenter) %>
-  <%= render_representations(presenter) %>
-  <%= render_documents(presenter) %>
+<% if presenter.citi_presenter? %>
+
+  <%= render_asset_relationship(presenter.preferred_representation_presenters, "Preferred Representation") %>
+  <%= render_asset_relationship(presenter.representation_presenters, "Representations") %>
+  <%= render_asset_relationship(presenter.document_presenters, "Documentation") %>
+
 <% else %>
-  <p>No relationships found for this <%= presenter.human_readable_type %></p>
+
+  <%= render_citi_relationship(presenter.preferred_representation_presenters, "Preferred Representation Of") %>
+  <%= render_citi_relationship(presenter.representation_presenters, "Representation Of") %>
+  <%= render_citi_relationship(presenter.document_presenters, "Documentation For") %> 
+  <%= render_asset_relationship(presenter.attachment_presenters, "Attachments") %>
+  <%= render_asset_relationship(presenter.attaching_presenters, "Attachment Of") %>
+
 <% end %>
