--- a/app/views/records/edit_fields/_preferred_representation_uri.html.erb
+++ b/app/views/records/edit_fields/_preferred_representation_uri.html.erb
@@ -1,8 +1,11 @@
-<%= f.input key, as: :hidden_select,
-  input_html: { class: 'autocomplete bigdrop', style: "width: 600px;",
+<div class='autocomplete-components'>
+  <h4>Preferred Representation</h4>
+  <p><em>Preferred image representing the resource. This will be used for the resource thumbnail and similar purposes.</em></p>
+  <%= f.input key, as: :hidden_select, hint: false, label: false, input_html: { class: 'autocomplete bigdrop preferred_representation',
     data: {
       label: f.object.preferred_representation_label,
       uid: f.object.preferred_representation_uid,
       thumbnail: f.object.preferred_representation_thumbnail
     }
   }, required: false %>
+</div>
