--- a/app/views/records/edit_fields/_document_uris.html.erb
+++ b/app/views/records/edit_fields/_document_uris.html.erb
@@ -1,2 +1,6 @@
-<%= f.input key, as: :hidden_multi_select, property: :documents,
+<div class='autocomplete-components'>
+<h4>Documents</h4>
+<p><em>Assets documenting this resource.</em></p>
+<%= f.input key, as: :hidden_multi_select, property: :documents, hint: false, label: false,
     input_html: { class: 'form-control' }, required: false %>
+</div>
