--- a/app/views/records/edit_fields/_keyword_uris.html.erb
+++ b/app/views/records/edit_fields/_keyword_uris.html.erb
@@ -1,3 +1,3 @@
 <%= f.input :keyword_uris, as: :select, label: t('simple_form.labels.generic_work.keyword'),
-    collection: Keyword.options, selected: @form.uris_for(:keyword),
+    collection: List.options(AICType.KeywordList), selected: @form.uris_for(:keyword),
     input_html: { class: 'form-control', multiple: true } %>
