--- a/app/views/sufia/batch_uploads/_form.html.erb
+++ b/app/views/sufia/batch_uploads/_form.html.erb
@@ -5,6 +5,7 @@
   <% end %>
   <%= render 'curation_concerns/base/guts4form', f: f, tabs: %w[files metadata relationships share] do %>
   <% end %>
+  <%= f.input :use_uri, as: :hidden %>
 <% end %>
 
 <%= render "lakeshore_js_template" %>
