max-width on autocomplete select elements

--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -98,6 +98,7 @@ div#documents td {
 
 table.autocomplete-components div.autocomplete.bigdrop {
   width: 80%;
+  max-width: 400px;
 }
 
 table.autocomplete-components table.table-condensed {
