adding email request for view access to resource

--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -183,6 +183,10 @@ table.relationships img {
 	max-height: 150px;
 }
 
-p.unauthorized_asset_title {
+p.unauthorized_asset_display {
   margin-top: 25%;
+}
+
+p.unauthorized_asset_display.asset_title {
+  margin-left: 15px;
 }
