--- a/app/views/curation_concerns/base/_show_actions.html.erb
+++ b/app/views/curation_concerns/base/_show_actions.html.erb
@@ -6,4 +6,7 @@
       <%= link_to "Edit", edit_polymorphic_path([main_app, presenter]), class: 'btn btn-default' %>
       <%= link_to "Delete", [main_app, presenter], class: 'btn btn-danger', data: { confirm: "Delete this #{presenter.human_readable_type}?" }, method: :delete if presenter.deleteable? %>
   <% end %>
+  <% unless presenter.imaging_uid.empty? %>
+    <a href="http://phoenix.artic.edu/order/create/batch/<%= presenter.imaging_uid.first %>" class='btn btn-default'>Create Lab Work</a>
+  <% end %>
 </div>
