--- a/app/views/records/edit_fields/_publish_channel_uris.html.erb
+++ b/app/views/records/edit_fields/_publish_channel_uris.html.erb
@@ -1,3 +1,3 @@
 <%= f.input :publish_channel_uris, as: :select, label: t('simple_form.labels.generic_work.publish_channels'),
     collection: AICPublishChannel.options, selected: @form.uris_for(:publish_channels),
-    input_html: { class: 'form-control', multiple: true } %>
+    input_html: { class: 'form-control', disabled: @form.disabled?(:publish_channels), multiple: true } %>
