Add URL field for external resources, ref #1722
Adds a new field for an external resource. Value is stored as a string and displayed as a link.

When batch uploading, only one external resource is allowed at a time, but multiple urls may be added in the edit view of a
single asset.

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -24,6 +24,7 @@
 <%= presenter.attribute_to_html(:end_date) %>
 <%= presenter.attribute_to_html(:exhibition_history, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:exhibition_type) %>
+<%= presenter.attribute_to_html(:external_resources, render_as: :external_link) %>
 <%= presenter.attribute_to_html(:fedora_uri) %>
 <%= presenter.attribute_to_html(:gallery_location) %>
 <%= presenter.attribute_to_html(:imaging_uid) %>
