--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -190,3 +190,8 @@ p.unauthorized_asset_display {
 p.unauthorized_asset_display.asset_title {
   margin-left: 15px;
 }
+
+body[data-turbolinks="false"] h1{
+  margin-bottom: 25px;
+  margin-top: 0;
+}
