Build authority list options via Solr, ref #1860
Authority URIs were built in forms by querying Fedora directly. This was causing performance degradation.

ListOptionsService builds the same authority option hashes for our forms, but does so using Solr queries instead of calling Fedora.

Existing List classes will need to be reindexed in order for this to work.

--- a/app/views/records/edit_fields/_compositing_uri.html.erb
+++ b/app/views/records/edit_fields/_compositing_uri.html.erb
@@ -1,4 +1,5 @@
 <%= f.input :compositing_uri, as: :select, label: t('simple_form.labels.generic_work.compositing'),
-	collection: List.options(AICType.CompositingTypeList), include_blank: true, selected: @form.uri_for(:compositing),
+	collection: ListOptionsService.call(AICType.CompositingTypeList), include_blank: true,
+  selected: @form.uri_for(:compositing),
 	wrapper_html: { class: 'selective-hide selective-show-stillimage' },
 	input_html: { class: 'form-control', multiple: false } %>
