--- a/app/views/records/edit_fields/_light_type_uri.html.erb
+++ b/app/views/records/edit_fields/_light_type_uri.html.erb
@@ -1,4 +1,4 @@
 <%= f.input :light_type_uri, as: :select, label: t('simple_form.labels.generic_work.light_type'),
-	collection: List.options(AICType.LightTypeList), include_blank: true, selected: @form.uri_for(:light_type),
+	collection: ListOptionsService.call(AICType.LightTypeList), include_blank: true, selected: @form.uri_for(:light_type),
 	wrapper_html: { class: 'selective-hide selective-show-stillimage' },
 	input_html: { class: 'form-control', multiple: false } %>
