--- a/app/views/records/edit_fields/_status_uri.html.erb
+++ b/app/views/records/edit_fields/_status_uri.html.erb
@@ -1,5 +1,5 @@
 <% unless action_name == 'new' %>
   <%= f.input :status_uri, as: :select, label: t('simple_form.labels.generic_work.status'),
-  	  		  collection: List.options(AICType.StatusTypeList), selected: @form.model.status.uri,
+  	  		  collection: ListOptionsService.call(AICType.StatusTypeList), selected: @form.model.status.uri,
               input_html: { class: 'form-control', multiple: false } %>
 <% end %>
