Ignore public permission objects in form, ref #1940
Asset with open access would not update if the visibility was changed.

Permission object ids were getting passed in the form for open access assets, when they should have been ignored. Visibility manages these
permissions and they do not need to be explicitly changed via the form.

--- a/app/views/curation_concerns/base/_form_share.html.erb
+++ b/app/views/curation_concerns/base/_form_share.html.erb
@@ -25,7 +25,7 @@
   <%= f.fields_for :permissions do |permission_fields| %>
 
     <%# skip admin and any permisions maintained by visibility %>
-    <% next if ['admin', 'registered', 'department', dept_created_uid, depositor].include? permission_fields.object.agent_name.downcase %>
+    <% next if ['admin', 'registered', 'department', 'public', dept_created_uid, depositor].include? permission_fields.object.agent_name.downcase %>
     <tr>
       <td>
 	<%= permission_fields.select :access, Sufia.config.permission_levels, {}, class: 'form-control select_perm' %>
