--- a/app/views/curation_concerns/base/_representative_media.html.erb
+++ b/app/views/curation_concerns/base/_representative_media.html.erb
@@ -1,7 +1,9 @@
 <% if presenter.representative_id.present? %>
   <% if presenter.representative_presenter.image? || presenter.representative_presenter.pdf? %>
     <%= UniversalViewer.script_tag %>
-    <div class="uv viewer" data-uri="<%= main_app.polymorphic_path [main_app, :manifest, presenter] %>"></div>
+    <div class="uv viewer"
+      data-uri="<%= main_app.polymorphic_path [main_app, :manifest, presenter] %>"
+      data-config="/uv_config.json"></div>
 
   <% else %>
     <%= media_display presenter.representative_presenter %>
