Display caption in non-asset view, ref #1764
Captions need to appear in the list of related assets on the show page
of a CITI resource.

This adds a column to the table of related assets displaying the caption
if it is present.

--- a/app/views/curation_concerns/base/_asset_relationship.html.erb
+++ b/app/views/curation_concerns/base/_asset_relationship.html.erb
@@ -7,6 +7,7 @@
       <th>Document Type</th>
       <th>Link</th>
       <th>UID</th>
+      <th>Non-Object Caption</th>
     </tr>
     <% presenters.each do |rel| %>
       <tr>
@@ -20,6 +21,7 @@
           <% end %>
         </td>
         <td><%= rel.uid %></td>
+        <td><%= rel.caption %></td>
       </tr>
     <% end %>
   </tbody>
