--- a/app/views/curation_concerns/base/_representative_media.html.erb
+++ b/app/views/curation_concerns/base/_representative_media.html.erb
@@ -1,5 +1,5 @@
 <% if presenter.representative_id.present? %>
-  <% if presenter.representative_presenter.image? || presenter.representative_presenter.pdf? %>
+  <% if presenter.still_image? || presenter.text? %>
     <%= UniversalViewer.script_tag %>
     <div class="uv viewer"
       data-uri="<%= main_app.polymorphic_path [main_app, :manifest, presenter] %>"
