Correct full screen display of the UV, ref #1993
The UV was only displaying two-thirds of the screen when in full screen
mode. This corrects the problem by employing inline styles.

--- a/app/views/curation_concerns/base/_representative_media.html.erb
+++ b/app/views/curation_concerns/base/_representative_media.html.erb
@@ -1,7 +1,7 @@
 <% if presenter.representative_id.present? %>
   <% if presenter.still_image? || presenter.text? %>
     <%= UniversalViewer.script_tag %>
-    <div class="uv viewer"
+    <div class="uv" style="width:100%; height:600px; background-color: #000"
       data-uri="<%= main_app.polymorphic_path [main_app, :manifest, presenter] %>"
       data-config="/uv_config.json"></div>
 
