Use solr representations of assets in non-asset forms, ref #1986
Rendering the edit forms for non-assets, particularly those with many
documents and representations, was a taking a long time to load due to
the many calls made to Fedora.

Replacing the Fedora-based object with a Solr one removes many of these
extra calls making the form render much faster.

--- a/app/views/records/edit_fields/_preferred_representation_uri.html.erb
+++ b/app/views/records/edit_fields/_preferred_representation_uri.html.erb
@@ -3,8 +3,8 @@
   <p><em>Preferred image representing the resource. This will be used for the resource thumbnail and similar purposes.</em></p>
   <%= f.input key, as: :hidden_select, hint: false, label: false, input_html: { class: 'autocomplete bigdrop preferred_representation',
     data: {
-      label: f.object.preferred_representation_label,
-      uid: f.object.preferred_representation_uid,
+      label: f.object.preferred_representation.pref_label,
+      uid: f.object.preferred_representation.uid,
       thumbnail: f.object.preferred_representation_thumbnail
     }
   }, required: false %>
