--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -50,6 +50,7 @@
 <%= presenter.attribute_to_html(:publ_ver_level) %>
 <%= presenter.attribute_to_html(:public_domain) %>
 <%= presenter.attribute_to_html(:publication_history, render_as: :multiline) %>
+<%= presenter.attribute_to_html(:publishable) %>
 <%= presenter.attribute_to_html(:publish_channels) %>
 <%= presenter.attribute_to_html(:start_date) %>
 <%= presenter.attribute_to_html(:status) %>
