--- a/app/views/batch_edits/edit.html.erb
+++ b/app/views/batch_edits/edit.html.erb
@@ -36,7 +36,7 @@
           <%= hidden_field_tag('update_type', 'update') %>
           <%= hidden_field_tag('key', 'permissions') %>
           <%= render "curation_concerns/base/form_permission", f: f %>
-          <%= render "curation_concerns/base/form_share", f: f %>
+          <%= render "curation_concerns/base/form_share", f: f if current_user.admin? %>
           <div class="row">
             <%= f.submit "Save changes", class: 'btn btn-primary updates-batches', id: 'permissions_save' %>
             <div id="status_permissions" class="status fleft"></div>
