fixes https://cits.artic.edu/redmine/issues/2146: Add clarifying text below "add new assets" link

--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -3,6 +3,8 @@
 <p><%= link_to "Add Documentation",
     sufia.new_batch_upload_path(document_for: @presenter, resource_title: @presenter.display_pref_label_and_uid), { class: "add_document_btn" } %></p>
 
+<%= render "shared/clarifying_text" %>
+
 <% if @presenter.has_relationships? %>
   <%= render '/curation_concerns/base/relationships_table', presenter: @presenter %>
 <% else %>
