resolves https://cits.artic.edu/redmine/issues/2149: add environment prefix to <title> for easier distinction (via figaro)
and rubocop fixes :)

--- a/app/views/layouts/_head_tag_content.html.erb
+++ b/app/views/layouts/_head_tag_content.html.erb
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="resourcesync" href="<%= sufia.capability_list_url %>"/>
 
-<title><%= content_for?(:page_title) ? yield(:page_title) : default_page_title %></title>
+<title><%= env_title_prefix + (content_for?(:page_title) ? yield(:page_title) : default_page_title) %></title>
 
 <!-- application css -->
 <%= stylesheet_link_tag 'application' %>
