--- a/app/views/shared/_clarifying_text.html.erb
+++ b/app/views/shared/_clarifying_text.html.erb
@@ -1,9 +1,11 @@
-<p>
-  <b>Representation:</b> an asset (image or other visual medium) that depicts the resource. E.g. a photograph of an object-based artwork; view of an exhibition; the transcript of a text-based or audio-only conceptual artwork; a video clip of an environment installation; a picture portraying a person or a museum building (Agent).
-</p>
-<p>
-  <b>Documentation:</b> supporting paperwork or visual material that does not visually represent a resource. E.g. a curatorial statement; a conservation report; an approval or decline letter for an exhibition; a floor plan of a museum (Agent) or exhibition.
-</p>
-<p>
-  <i>If in doubt, please ask an admin for advice. Categorizing resources correctly helps finding and managing them.</i>
-</p>
+<div class="clarifying-text">
+  <p>
+    <b>Representation:</b> an asset (image or other visual medium) that depicts the resource. E.g. a photograph of an object-based artwork; view of an exhibition; the transcript of a text-based or audio-only conceptual artwork; a video clip of an environment installation; a picture portraying a person or a museum building (Agent).
+  </p>
+  <p>
+    <b>Documentation:</b> supporting paperwork or visual material that does not visually represent a resource. E.g. a curatorial statement; a conservation report; an approval or decline letter for an exhibition; a floor plan of a museum (Agent) or exhibition.
+  </p>
+  <p>
+    <i>If in doubt, please ask an admin for advice. Categorizing resources correctly helps finding and managing them.</i>
+  </p>
+</div>
