--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -165,3 +165,7 @@ p.unauthorized_asset_display {
 p.unauthorized_asset_display.asset_title {
   margin-left: 15px;
 }
+
+.clarifying-text {
+  font-size: smaller;
+}
