better css class name...

--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -166,6 +166,6 @@ p.unauthorized_asset_display.asset_title {
   margin-left: 15px;
 }
 
-.clarifying-text {
+.smaller-text {
   font-size: smaller;
 }
