--- a/app/views/shared/_clarifying_text.html.erb
+++ b/app/views/shared/_clarifying_text.html.erb
@@ -1,4 +1,4 @@
-<div class="clarifying-text">
+<div class="smaller-text">
   <p>
     <b>Representation:</b> an asset (image or other visual medium) that depicts the resource. E.g. a photograph of an object-based artwork; view of an exhibition; the transcript of a text-based or audio-only conceptual artwork; a video clip of an environment installation; a picture portraying a person or a museum building (Agent).
   </p>
