--- a/app/views/records/edit_fields/_document_type_uri.html.erb
+++ b/app/views/records/edit_fields/_document_type_uri.html.erb
@@ -5,9 +5,9 @@
 <div class="form-group select required <%= form_class %>_document_type_uri" data-uri="<%= f.object.uri_for(:document_type)%>">
   <label class="multi_value required control-label" for="<%= form_class %>_document_type_uri">
     Document type <span class="label label-info required-tag">required</span>
-  </label>    
-	
+  </label>
+
 	<select class="select required form-control form-control" required="required" aria-required="true" name="<%= form_class %>[document_type_uri]" id="<%= form_class %>_document_type_uri">
-		<option selected value="base">Please select asset type first</option>
+		<option selected value="">Please select asset type first</option>
 	</select>
 </div>
