--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -139,7 +139,7 @@ div.home_share_work {
     display: none;
 }
 
-table.relationships img, table.representation_uris img, table.document_uris img {
+table.relationships img, table.representation_ids img, table.document_ids img {
 	max-height: 150px;
 }
 
