--- a/app/views/records/edit_fields/_copyright_representatives.html.erb
+++ b/app/views/records/edit_fields/_copyright_representatives.html.erb
@@ -11,12 +11,12 @@
   <table class="autocomplete-components">
     <tr>
       <td>
-        <%= select_tag "autocomplete_attachments_for", options_for_select(
+        <%= select_tag "autocomplete_copyright_representatives", options_for_select(
           [ "Agent"], "Agent"), { class: "autocomplete_model", style: "width: 110px;" } %>
         </td>
         <td>
           <%= f.input :copyright_representatives, as: :hidden_multi_select, hint: false, label: false,
-              input_html: { class: 'form-control' }, required: false %>
+              input_html: { class: 'form-control' }, required: false, value_type: :id %>
         </td>
       </tr>
   </table>
